# openmw

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .readthedocs.yaml  .resubmitted_merge_requests.txt  .travis.yml  AI_DIALOGUE_ENGINE_ANALYSIS.md  AI_DIALOGUE_IMPLEMENTATION.md  AUTHORS.md  BUILDING-win32.txt  Bug4707.patch  CEREBRAS_QUICKSTART.md  CHANGELOG.md  CHANGELOG_PR.md  CMakeLists.txt  CODESTYLE.md  COMPILE-linux.txt  COMPILE-win32.txt  CONTRIBUTING.md  CodeBlocks.cbp  Daedric Font License.txt  DejaVu Font License.txt  Doxyfile  INSTALL-linux.txt  INSTALL-win32.txt  LICENSE  LICENSE.txt  Makefile  OFL.txt  OpenMW-mp changelog  OpenMW.cbp  README-win32.txt  README.md  README.txt  README_Mac.md  (+35 more)
CI/: deploy.sh  (+33 more)
apps/benchmarks/: CMakeLists.txt
apps/browser/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MySortFilterProxyModel.cpp  MySortFilterProxyModel.hpp  NetController.cpp  NetController.hpp  PingHelper.cpp  PingHelper.hpp  PingUpdater.cpp  PingUpdater.hpp  QueryHelper.cpp  QueryHelper.hpp  ServerInfoDialog.cpp  ServerInfoDialog.hpp  ServerModel.cpp  ServerModel.hpp  Types.hpp  main.cpp
apps/bsatool/: CMakeLists.txt  bsatool.cpp  bsatool_cmd.c  bsatool_cmd.h
apps/bulletobjecttool/: CMakeLists.txt  main.cpp
apps/components_tests/: CMakeLists.txt  main.cpp
apps/esmtool/: .gitignore  CMakeLists.txt  Makefile  arguments.hpp  esmtool.cpp  esmtool_cmd.c  esmtool_cmd.h  labels.cpp  labels.hpp  record.cpp  record.hpp  tes4.cpp  tes4.hpp
apps/essimporter/: CMakeLists.txt  convertacdt.cpp  convertacdt.hpp  convertcntc.cpp  convertcntc.hpp  convertcrec.cpp  convertcrec.hpp  converter.cpp  converter.hpp  convertinventory.cpp  convertinventory.hpp  convertnpcc.cpp  convertnpcc.hpp  convertplayer.cpp  convertplayer.hpp  convertscpt.cpp  convertscpt.hpp  convertscri.cpp  convertscri.hpp  importacdt.cpp  importacdt.hpp  importcellref.cpp  importcellref.hpp  importcntc.cpp  importcntc.hpp  importcrec.cpp  importcrec.hpp  importdial.cpp  importdial.hpp  importer.cpp  importer.hpp  importercontext.hpp  importgame.cpp  importgame.hpp  importinfo.cpp  importinfo.hpp  importinventory.cpp  importinventory.hpp  importjour.cpp  importjour.hpp  (+17 more)
apps/launcher/: CMakeLists.txt  advancedpage.cpp  advancedpage.hpp  combobox.hpp  datafilesdialog.cpp  datafilesdialog.h  datafilesmodel.cpp  datafilesmodel.h  datafilespage.cpp  datafilespage.hpp  filedialog.cpp  filedialog.hpp  graphicspage.cpp  graphicspage.hpp  importpage.cpp  importpage.hpp  launcher.pro  launcher.rc  lineedit.cpp  main.cpp  maindialog.cpp  maindialog.h  maindialog.hpp  naturalsort.cpp  naturalsort.hpp  playpage.cpp  playpage.hpp  pluginsmodel.cpp  pluginsmodel.hpp  pluginsview.cpp  pluginsview.hpp  resources.qrc  sdlinit.cpp  sdlinit.hpp  settingsdialog.cpp  settingsdialog.h  settingspage.cpp  settingspage.hpp  text_slot_msg_box.cpp  textslotmsgbox.cpp  (+5 more)
apps/master/: CMakeLists.txt  MasterServer.cpp  MasterServer.hpp  RestServer.cpp  RestServer.hpp  ServerTest.cpp  main.cpp
apps/mwiniimporter/: CMakeLists.txt  importer.cpp  importer.hpp  main.cpp  main.hpp
apps/mwiniimporter_tests/: CMakeLists.txt  main.cpp
apps/navmeshtool/: CMakeLists.txt  main.cpp  navmesh.cpp  navmesh.hpp  worldspacedata.cpp  worldspacedata.hpp
apps/nifconv/: CMakeLists.txt  nifconv.cpp
apps/niftest/: CMakeLists.txt  find_bad_nifs.sh  niftest.cpp
apps/opencs/: CMakeLists.txt  Networking.cpp  editor.cpp  editor.hpp  main.cpp  ocspropertywidget.cpp  ocspropertywidget.hpp
apps/opencs_tests/: CMakeLists.txt  main.cpp
apps/openmw/: CMakeLists.txt  SDL_android_main.c  android_commandLine.cpp  android_commandLine.h  android_main.c  android_main.cpp  config.hpp.cmake  crashcatcher.cpp  doc.hpp  engine.cpp  engine.hpp  main.cpp  mapextractor.cpp  mapextractor.hpp  options.cpp  options.hpp  path.cpp  path.hpp  physicssystem.cpp  profile.hpp  refdata.hpp  switch_startup.cpp  switch_startup.hpp  world.cpp  world.hpp
apps/openmw-mp/: ActorProcessor.cpp  ActorProcessor.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  CellController.cpp  CellController.hpp  Log.cpp  Log.hpp  MasterClient.cpp  MasterClient.hpp  Networking.cpp  Networking.hpp  Player.cpp  Player.hpp  PlayerProcessor.cpp  PlayerProcessor.hpp  ProcessorInitializer.cpp  Utils.cpp  Utils.hpp  WorldProcessor.cpp  WorldProcessor.hpp  init_processors.cpp  init_processors.hpp  main.cpp
apps/openmw_test_suite/: CMakeLists.txt  openmw_test_suite.cpp  testing_util.hpp
apps/openmw_tests/: CMakeLists.txt  main.cpp  options.cpp
apps/wizard/: CMakeLists.txt  buypage.cpp  buypage.hpp  componentselectionpage.cpp  componentselectionpage.hpp  conclusionpage.cpp  conclusionpage.hpp  existinginstallationpage.cpp  existinginstallationpage.hpp  importpage.cpp  importpage.hpp  inisettings.cpp  inisettings.hpp  installationpage.cpp  installationpage.hpp  installationtargetpage.cpp  installationtargetpage.hpp  intropage.cpp  intropage.hpp  languageselectionpage.cpp  languageselectionpage.hpp  main.cpp  mainwizard.cpp  mainwizard.hpp  methodselectionpage.cpp  methodselectionpage.hpp  qrc_wizard.cxx  (+2 more)
components/: CMakeLists.txt  doc.hpp  windows.hpp
docs/: CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.cmake  Doxyfile.in  DoxyfilePages  DoxyfilePages.cmake  DoxyfilePages.in  README.md  build_docs.sh  build_teal.sh  generate_teal_declarations.sh  jquery.js  openmw-stage1.md  prepare_docker_image.sh  requirements.txt  switch_build.md  switch_build.txt  tlconfig.lua
serializers/: CMakeLists.txt  alphacontroller.cpp  billboardcallback.cpp  computeboundingboxcallback.cpp  controller.cpp  controllerfunction.cpp  controllersource.cpp  flipcontroller.cpp  frametimesource.cpp  geommorphcontroller.cpp  gravityaffector.cpp  keyframecontroller.cpp  keyframeholder.cpp  keymap.hpp  materialcolorcontroller.cpp  nifcontrollerfunction.cpp  particlesystem.cpp  particlesystemcontroller.cpp  riggeometry.cpp  skeleton.cpp  staticboundingboxcallback.cpp  updatemorphgeometry.cpp  updaterigbounds.cpp  updateriggeometry.cpp  uvcontroller.cpp  viscontroller.cpp
(+6698 files in other folders)
